--- a/demo/res/layout/grid_item1.xml
+++ b/demo/res/layout/grid_item1.xml
@@ -2,12 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ff0000" >
+    android:layout_height="fill_parent" 
+    android:background="@drawable/bg_grid_item">
 
     <ImageView
+        android:id="@+id/image"
 	    android:layout_width="fill_parent"
-	    android:layout_height="100dp"
-	    android:src="@drawable/ic_launcher" />
+	    android:layout_height="wrap_content"
+	    android:scaleType="fitXY"/>
     
 </FrameLayout>    
