--- a/demo/res/layout/test_layout.xml
+++ b/demo/res/layout/test_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="#F2F2F2" >
 
-    <com.mani.view.demo.StaggeredGridView
-        android:id="@+id/waterfall" 
+    <com.mani.view.StaggeredGridView
+        android:id="@+id/staggeredview" 
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent" />
     
