Added grid item 1 which takes title.

--- a/demo/res/values/dimens.xml
+++ b/demo/res/values/dimens.xml
@@ -2,6 +2,6 @@
 
     <!-- Radius -->
     <dimen name="border_radius">3dp</dimen>
-    
+    <dimen name="padding_normal">10dp</dimen>
 </resources>
 
