--- a/demo/res/layout/grid_item2.xml
+++ b/demo/res/layout/grid_item2.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ff0000" >
+    android:layout_height="fill_parent" 
+    android:background="@drawable/bg_grid_item">
 
     <ImageView
+        android:id="@+id/image"
 	    android:layout_width="fill_parent"
-	    android:layout_height="170dp"
-	    android:src="@drawable/ic_launcher" />
-    
-</FrameLayout>    
+	    android:layout_height="wrap_content"
+	    android:scaleType="fitXY"/>
+
+    <TextView
+        android:id="@+id/title"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:textColor="#000000"
+	    android:padding="@dimen/padding_normal"
+	    android:layout_below="@id/image"/>
+        
+</RelativeLayout>    
