--- a/demo/res/layout/grid_item3.xml
+++ b/demo/res/layout/grid_item3.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent" 
+    android:background="@drawable/bg_grid_item">
 
     <ImageView
         android:id="@+id/image"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:scaleType="fitXY"/>
+
+    <TextView
+        android:id="@+id/title"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:textColor="#000000"
+	    android:padding="@dimen/padding_normal"
+	    android:layout_below="@id/image"/>
+        
     
-</FrameLayout>    
+    <ImageView
+        android:id="@+id/profile_image"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:scaleType="fitXY"/>
+    
+    <TextView
+        android:id="@+id/user_name"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:textColor="#000000"
+	    android:padding="@dimen/padding_normal"
+	    android:layout_below="@id/image"/>
+    
+    
+</RelativeLayout>    
