--- a/demo/res/layout/grid_item3.xml
+++ b/demo/res/layout/grid_item3.xml
@@ -19,18 +19,21 @@
 	    android:padding="@dimen/padding_normal"
 	    android:layout_below="@id/image"/>
         
-    
     <ImageView
         android:id="@+id/profile_image"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_width="48dp"
+	    android:layout_height="48dp"
+	    android:layout_marginLeft="@dimen/padding_normal"
+	    android:layout_alignParentLeft="true"
+	    android:layout_below="@id/image"
 	    android:scaleType="fitXY"/>
     
     <TextView
-        android:id="@+id/user_name"
+        android:id="@+id/profile_name"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:textColor="#000000"
+	    android:layout_toRightOf="@id/profile_image"
 	    android:padding="@dimen/padding_normal"
 	    android:layout_below="@id/image"/>
     
