--- a/demo/res/layout/grid_item3.xml
+++ b/demo/res/layout/grid_item3.xml
@@ -11,21 +11,25 @@
 	    android:layout_height="wrap_content"
 	    android:scaleType="fitXY"/>
 
-    <TextView
-        android:id="@+id/title"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	    android:textColor="#000000"
-	    android:padding="@dimen/padding_normal"
-	    android:layout_below="@id/image"/>
+    <View
+        android:id="@+id/line"
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/image"
+        android:background="#D9D2BF"/>
+    
+<RelativeLayout 
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" 
+    android:padding="@dimen/padding_normal"
+    android:background="@drawable/bg_profile"
+    android:layout_below="@id/line">
         
     <ImageView
         android:id="@+id/profile_image"
-	    android:layout_width="48dp"
-	    android:layout_height="48dp"
-	    android:layout_marginLeft="@dimen/padding_normal"
+	    android:layout_width="40dp"
+	    android:layout_height="40dp"
 	    android:layout_alignParentLeft="true"
-	    android:layout_below="@id/image"
 	    android:scaleType="fitXY"/>
     
     <TextView
@@ -33,9 +37,10 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:textColor="#000000"
-	    android:layout_toRightOf="@id/profile_image"
-	    android:padding="@dimen/padding_normal"
-	    android:layout_below="@id/image"/>
-    
+	    android:layout_centerVertical="true"
+	    android:layout_marginLeft="@dimen/padding_small"
+	    android:layout_toRightOf="@id/profile_image"/>
+	
+    </RelativeLayout>
     
 </RelativeLayout>    
