--- a/demo/res/values/colors.xml
+++ b/demo/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="bg_black">#000000</color>
 	<color name="bg_transparent_80">#80000000</color>
 </resources>
