--- a/demo/res/layout/grid_item3.xml
+++ b/demo/res/layout/grid_item3.xml
@@ -9,6 +9,7 @@
         android:id="@+id/image"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
+	    android:minHeight="50dp"
 	    android:scaleType="fitXY"/>
 
 <RelativeLayout 
