--- a/demo/res/layout/grid_item1.xml
+++ b/demo/res/layout/grid_item1.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/image"
 	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="200dp"
 	    android:minHeight="50dp"
 	    android:scaleType="fitXY"/>
     
